@startuml
entity Productos {
  Id INT <<PK>>
  Nombre VARCHAR 
  Descripción VARCHAR
  Precio FLOAT 
  Stock INT 
  <<FK>> Categoria VARCHAR()
}

entity Clientes {
  Id INT <<PK>>
  Nombre VARCHAR
  Correo Electronico VARCHAR
  Dirección VARCHAR
  Telefono VARCHAR 
}


entity Pedidos{
  Id INT <<PK>>
  Fecha_pedido DATE
  Estado VARCHAR
  Productos_Id INT
  <<FK>> id_cliente INT

}


entity Resenas{
  id INT <<PK>>
  Calificación_Producto INT
  Comentario VARCHAR
  fecha date 
<<FK>> id_producto INT
<FK>> id_cliente INT
}

entity Categorias {
  Id INT <<PK>>
  Nombre VARCHAR
  Descripcion VARCHAR
}

entity Detalles_pedido {
   Id INT <<PK>>
   Cantidad INT
   Precio_unitario FLOAT 
<<FK> Id_pedido INT
<<FK>> Id_cliente INT

}


Productos }o--|| Categorias : pertenece a
Pedidos }o--|| Clientes : realizado por
Resenas }o--|| Productos : reseña de
Resenas }o--|| Clientes : escrita por
Detalles_Pedido }o--|| Pedidos : pertenece a
Detalles_Pedido }o--|| Productos : contiene

@enduml
